<resources>
    <string name="app_name">Epicash</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Epicash_retour">Retour</string>
    <string name="Epicash_profil_titre">Profil</string>
    <string name="Epicash_profil_nom">Nom</string>
    <string name="Epicash_profil_prenom">Prénom</string>
    <string name="Epicash_profil_mail">Adresse email</string>
    <string name="Epicash_profil_button_mdp">Mot de passe</string>
    <string name="Epicash_profil_button_deconnexion">Déconnexion</string>
    <string name="Epicash_profil_button_supprimerCompte">Supprimer mon compte</string>
    <string name="Epicash_profil_data_nom">John</string>
    <string name="Epicash_profil_data_prenom">Doe</string>
    <string name="Epicash_profil_name">Name</string>
    <string name="Epicash_profil_email">John.doe@gmail.com</string>
    <string name="Epicash_home_titre">Accueil</string>
    <string name="Epicash_home_solde_data">20 EUR</string>
    <string name="Epicash_home_solde">Solde</string>
    <string name="Epicash_home_button_paiement">Paiement</string>
    <string name="Epicash_home_SeeAll">Voir tout</string>
    <string name="Epicash_home_price1_data">6,99 EUR</string>
    <string name="Epicash_home_price1_quantite">0</string>
    <string name="image">image</string>
    <string name="Epicash_home_price2_data">6,99 EUR</string>
    <string name="Epicash_home_price2_quantite">0</string>
    <string name="Epicash_home_price3_quantite">0</string>
    <string name="Epicash_home_price3_data">6,99 EUR</string>
    <string name="Epicash_home_panier">Panier</string>
    <string name="Epicash_home_total">Total :</string>
    <string name="Epicash_home_price_data">17,90</string>
    <string name="Epicash_home_euros">Euros</string>
    <string name="Epicash_modifypwd_titre">Modifier mon mot de passe</string>
    <string name="Epicash_forgotpwd_titre">Mot de passe oublié</string>
    <string name="Epicash_modifypwd_hint_ancien_pwd">Ancien mot de passe</string>
    <string name="Epicash_modifypwd_hint_nouveau_pwd">Nouveau mot de passe</string>
    <string name="Epicash_modifypwd_hint_saisir_encore">Saisissez à nouveau le mot de passe</string>
    <string name="Epicash_end_done">Ça y est !</string>
    <string name="Epicash_end_valid_payment">Paiement validé</string>
    <string name="Epicash_end_button_retour">Retourner à laccueil</string>
    <string name="Epicash_cgu_title">Termes et conditions</string>
    <string name="Epicash_cgu_termes_conditions">
        <![CDATA[Conditions générales d\'utilisation du site [nom du site] ARTICLE 1 : Objet Les présentes « conditions générales d\'utilisation » ont pour objet l\'encadrement juridique de l’utilisation du site [votre site] et de ses services. Ce contrat est conclu entre : Le gérant du site internet, ci-après désigné « l’Éditeur », Toute personne physique ou morale souhaitant accéder au site et à ses services, ci-après appelé « l’Utilisateur ». Les conditions générales d\'utilisation doivent être acceptées par tout Utilisateur, et son accès au site vaut acceptation de ces conditions. ARTICLE 2 : Mentions légales Pour les personnes morales : Le site [nom du site] est édité par la société [nom de la société], [statut juridique (SAS, SARL, etc.)] au capital de [montant en euros] €, dont le siège social est situé au [adresse du siège social]. La société est représentée par [nom et prénom du responsable]. Pour les personnes physiques : Le site [nom du site] est édité par [nom et prénom du responsable], domicilié au [adresse postale]. ARTICLE 3 : accès aux services L’Utilisateur du site [votre site] a accès aux services suivants : • [Service n°1] • [Service n°2] • [Service n°3] • [Service n°4] • … Tout Utilisateur ayant accès a internet peut accéder gratuitement et depuis n’importe où au site. Les frais supportés par l’Utilisateur pour y accéder (connexion internet, matériel informatique, etc.) ne sont pas à la charge de l’Éditeur. Les services suivants ne sont pas accessible pour l’Utilisateur que s’il est membre du site (c’est-à-dire qu’ile st identifié à l’aide de ses identifiants de connexion) : • [Service n°1] • [Service n°2] • … Le site et ses différents services peuvent être interrompus ou suspendus par l’Éditeur, notamment à l’occasion d’une maintenance, sans obligation de préavis ou de justification. ARTICLE 4 : Responsabilité de l’Utilisateur L\'Utilisateur est responsable des risques liés à l’utilisation de son identifiant de connexion et de son mot de passe. Le mot de passe de l’Utilisateur doit rester secret. En cas de divulgation de mot de passe, l’Éditeur décline toute responsabilité. L’Utilisateur assume l’entière responsabilité de l’utilisation qu’il fait des informations et contenus présents sur le site [votre site]. Tout usage du service par l\'Utilisateur ayant directement ou indirectement pour conséquence des dommages doit faire l\'objet d\'une indemnisation au profit du site. Le site permet aux membres de publier sur le site : • [Commentaires] ; • [Oeuvres] ; • Etc. Le membre s’engage à tenir des propos respectueux des autres et de la loi et accepte que ces publications soient modérées ou refusées par l’Éditeur, sans obligation de justification. En publiant sur le site, l’Utilisateur cède à la société éditrice le droit non exclusif et gratuit de représenter, reproduire, adapter, modifier, diffuser et distribuer sa publication, directement ou par un tiers autorisé. L’Éditeur s\'engage toutefois à citer le membre en cas d’utilisation de sa publication ARTICLE 5 : Responsabilité de l’Éditeur Tout dysfonctionnement du serveur ou du réseau ne peut engager la responsabilité de l’Éditeur. De même, la responsabilité du site ne peut être engagée en cas de force majeure ou du fait imprévisible et insurmontable d\'un tiers. Le site [votre site] s\'engage à mettre en œuvre tous les moyens nécessaires pour garantir la sécurité et la confidentialité des données. Toutefois, il n’apporte pas une garantie de sécurité totale. L’Éditeur se réserve la faculté d’une non-garantie de la fiabilité des sources, bien que les informations diffusées su le site soient réputées fiables. ARTICLE 6 : Propriété intellectuelle Les contenus du site [votre site] (logos, textes, éléments graphiques, vidéos, etc.) son protégés par le droit d’auteur, en vertu du Code de la propriété intellectuelle. L’Utilisateur devra obtenir l’autorisation de l’éditeur du site avant toute reproduction, copie ou publication de ces différents contenus. Ces derniers peuvent être utilisés par les utilisateurs à des fins privées ; tout usage commercial est interdit. L’Utilisateur est entièrement responsable de tout contenu qu’il met en ligne et il s’engage à ne pas porter atteinte à un tiers. L’Éditeur du site se réserve le droit de modérer ou de supprimer librement et à tout moment les contenus mis en ligne par les utilisateurs, et ce sans justification. ARTICLE 7 : Données personnelles L’Utilisateur doit obligatoirement fournir des informations personnelles pour procéder à son inscription sur le site. L’adresse électronique (e-mail) de l’utilisateur pourra notamment être utilisée par le site [nom de votre site] pour la communication d’informations diverses et la gestion du compte. [Votre site] garantie le respect de la vie privée de l’utilisateur, conformément à la loi n°78-17 du 6 janvier 1978 relative à l\'informatique, aux fichiers et aux libertés. Le site est déclaré auprès de la CNIL sous le numéro suivant : [numéro]. En vertu des articles 39 et 40 de la loi en date du 6 janvier 1978, l\'Utilisateur dispose d\'un droit d\'accès, de rectification, de suppression et d\'opposition de ses données personnelles. L\'Utilisateur exerce ce droit via : • Son espace personnel sur le site ; • Un formulaire de contact ; • Par mail à [adresse mail de l’administrateur] ; • Par voie postale au [votre adresse]. ARTICLE 8 : Liens hypertextes Les domaines vers lesquels mènent les liens hypertextes présents sur le site n’engagent pas la responsabilité de l’Éditeur de [votre site], qui n’a pas de contrôle sur ces liens. Il est possible pour un tiers de créer un lien vers une page du site [votre site] sans autorisation expresse de l’éditeur. ARTICLE 9 : Évolution des conditions générales d’utilisation Le site [votre site] se réserve le droit de modifier les clauses de ces conditions générales d’utilisation à tout moment et sans justification. ARTICLE 10 : Durée du contrat La durée du présent contrat est indéterminée. Le contrat produit ses effets à l\'égard de l\'Utilisateur à compter du début de l’utilisation du service. ARTICLE 11 : Droit applicable et juridiction compétente Le présent contrat dépend de la législation française. En cas de litige non résolu à l’amiable entre l’Utilisateur et l’Éditeur, les tribunaux de [nom de ville] sont compétents pour régler le contentieux.]]></string>
    <string name="Epicash_cgu_lu_approuve">Lu et approuvé</string>
    <string name="Epicash_profil_data_password">Mot de passe</string>
    <string name="Epicash_profil_button_connexion">Connexion</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Epicash_send_mail">Envoyer le mail</string>
    <string name="Epicash_bill_button_connexion">Payer</string>
    <string name="title_activity_main">ActivityMain</string>
    <string name="Epicash_card_button_ajout">Ajouter</string>


    <!-- ROUTES -->
    <!-- USERS -->
    <string name="Route_post_create_user">http://51.210.102.51:4211/api/users</string>
    <string name="Route_get_all_users">http://51.210.102.51:4211/api/users</string>
    <string name="Route_get_user_by_id">http://51.210.102.51:4211/api/users/</string> <!-- /users/:id -->
    <string name="Route_get_user_id">http://51.210.102.51:4211/api/users/identify</string>
    <string name="Route_get_accounts_by_userID">http://51.210.102.51:4211/api/users/accounts/</string> <!-- /accounts/:id -->
    <string name="Route_post_create_account">http://51.210.102.51:4211/api/users/accounts</string>

    <!-- PRODUCTS -->
    <string name="Route_post_create_product">http://51.210.102.51:4211/api/products</string>
    <string name="Route_post_get_all_products">http://51.210.102.51:4211/api/products</string>
    <string name="Route_post_get_product_by_id">http://51.210.102.51:4211/api/products</string> <!-- /products/:id -->
    <string name="Route_put_user_by_id">http://51.210.102.51:4211/api/users</string> <!-- /users/:id -->
    <string name="Route_delete_user_by_id">http://51.210.102.51:4211/api/users</string>
    <string name="Epicash_shop_titre">Shop</string> <!-- /users/:id -->


</resources>