<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".ProfileFragment">
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:background="@color/Epicash_background">
        <ImageButton
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:scaleType="fitXY"
                android:background="@android:color/transparent"
                android:id="@+id/Epicash_profil_button_retour"
                android:contentDescription="@string/image"/>
        <TextView
                android:id="@+id/Epicash_home_titre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/Epicash_profil_titre"
                android:fontFamily="@font/roboto"
                android:textSize="22sp"/>
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:layout_marginLeft="20dp"
                      android:layout_marginRight="20dp">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/rounded_corner">
                <TextView
                        android:text="@string/Epicash_profil_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/roboto"
                        android:textSize="16sp"/>
                <TextView
                        android:text=""
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/Epicash_profil_data_nom"
                        android:layout_marginStart="20dp"
                        android:fontFamily="@font/roboto"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="16sp"/>
                <TextView
                        android:text="@string/Epicash_profil_prenom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView2"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/roboto"
                        android:textSize="16sp"/>
                <TextView
                        android:text="@string/Epicash_profil_data_prenom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/Epicash_profil_data_prenom"
                        android:layout_marginStart="20dp"
                        android:fontFamily="@font/roboto"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="16sp"/>
                <TextView
                        android:text="@string/Epicash_profil_mail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/profil_email"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/roboto"
                        android:textSize="16sp"/>
                <TextView
                        android:text="@string/Epicash_profil_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/Epicash_profil_data_mail"
                        android:layout_marginStart="20dp"
                        android:layout_marginBottom="20dp"
                        android:fontFamily="@font/roboto"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="16sp"/>
            </LinearLayout>
            <Button
                    android:text="@string/Epicash_profil_button_mdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textAllCaps="false"
                    android:id="@+id/Epicash_profil_button_pwd"
                    android:textColor="@color/black"
                    android:fontFamily="@font/roboto"
                    android:background="@android:color/transparent"/>

            <Button
                android:id="@+id/Epicash_profil_button_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_corner"
                android:fontFamily="@font/roboto"
                android:text="@string/Epicash_profil_button_deconnexion"
                android:textAllCaps="false"
                android:textColor="@color/Epicash_red"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:gravity="bottom"
                      android:layout_marginLeft="20dp"
                      android:layout_marginRight="20dp">

            <Button
                android:id="@+id/Epicash_profil_button_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/roboto"
                android:text="@string/Epicash_profil_button_supprimerCompte"
                android:textAllCaps="false"
                android:textColor="@color/Epicash_red"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>