<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".fragment_modify_pwd">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/Epicash_background">
        <ImageButton
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:scaleType="fitXY"
            android:background="@android:color/transparent"
            android:id="@+id/Epicash_modifypwd_button_retour"/>
        <TextView
                android:id="@+id/Epicash_modifypwd_titre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/Epicash_modifypwd_titre"
                android:fontFamily="@font/roboto"
                android:textSize="22sp"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="20dp"
                android:gravity="center">


            <EditText
                    android:id="@+id/Epicash_modifypwd_ancienpwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:inputType="textPassword"
                    android:text=""
                    tools:ignore="SpeakableTextPresentCheck"
                    android:hint="@string/Epicash_modifypwd_hint_ancien_pwd"/>
            <EditText
                    android:id="@+id/Epicash_modifypwd_nouveaupwd"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:inputType="textPassword"
                    android:text=""
                    tools:ignore="SpeakableTextPresentCheck"
                    android:hint="@string/Epicash_modifypwd_hint_nouveau_pwd"/>
            <EditText
                    android:id="@+id/Epicash_modifypwd_saisir_encore_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:inputType="textPassword"
                    android:text=""
                    tools:ignore="SpeakableTextPresentCheck"
                    android:hint="@string/Epicash_modifypwd_hint_saisir_encore"/>
            <Button
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="Enregistrer"
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/Epicash_modifypwd_button_enregistrer"
                    android:textColor="@color/black"
                    android:background="@android:color/transparent"
                    android:textAllCaps="false"
            />


        </LinearLayout>
    </LinearLayout>
</FrameLayout>