<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".ForgotPwd">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:background="@color/Epicash_background">
        <ImageButton
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:scaleType="fitXY"
                android:background="@android:color/transparent"
                android:id="@+id/Epicash_forgot_password_button_retour"/>

        <TextView
                android:id="@+id/Epicash_forgotpwd_titre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/Epicash_forgotpwd_titre"
                android:fontFamily="@font/roboto"
                android:textSize="22sp"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="20dp"
                android:gravity="center">

            <EditText
                    android:id="@+id/Epicash_forgotpwd_saisir_mail"
                    android:textColorHint="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:padding="10dp"
                    android:inputType="text"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:hint="@string/Epicash_profil_mail"
                    android:background="@drawable/rounded_corner"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/Epicash_edittext_background"/>
            <Button
                    android:text="@string/Epicash_send_mail"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="60dp"
                    android:layout_marginEnd="60dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/Epicash_forgotpwd_button_send"
                    android:textColor="@color/white"
                    android:background="@drawable/rounded_corner"
                    android:backgroundTint="@color/Epicash_button"
                    android:textAllCaps="false"
            />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>